--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2205,19 +2205,30 @@ code {
   position: absolute;
   top: 0;
 }
+.right .rightBar .header .header-buttons {
+  display: grid;
+  grid-template-columns: 36px 36px 36px 36px;
+  grid-gap: 5px;
+  margin-left: 25px;
+  margin-top: 15px;
+}
 .right .rightBar .header .header-buttons .openChat {
   width: 30px;
   height: 30px;
-  position: absolute;
-  left: 60px;
-  top: 55px;
 }
 .right .rightBar .header .header-buttons .openChat .inputS {
   height: 100%;
   width: 100%;
 }
 .right .rightBar .header .header-buttons .openChat .inputS .inputS-outline {
-  background: none !important;
+  position: absolute;
+  background: #83e4e4;
+  top: 1px;
+  left: -3px;
+  width: 36px;
+  height: 30px;
+  -webkit-mask-image: url("../svg/borderVerySmall.svg");
+  mask-image: url("../svg/borderVerySmall.svg");
 }
 .right .rightBar .header .header-buttons .openChat .inputS .inputS_imgRight {
   height: 100%;
@@ -2227,7 +2238,8 @@ code {
   height: 100%;
   width: 100%;
   position: absolute;
-  -webkit-mask-size: 20px;
+  top: 2px;
+  -webkit-mask-size: 19px;
   -webkit-mask-image: url("../svg/chat.svg");
   mask-image: url("../svg/chat.svg");
   -webkit-mask-repeat: no-repeat;
@@ -2236,9 +2248,6 @@ code {
   mask-position: center center;
 }
 .right .rightBar .header .header-buttons .challenge {
-  position: absolute;
-  left: 10px;
-  top: 55px;
   width: 30px;
   height: 30px;
 }
@@ -2247,7 +2256,14 @@ code {
   height: 100%;
 }
 .right .rightBar .header .header-buttons .challenge .inputS .inputS-outline {
-  background: none !important;
+  position: absolute;
+  background: #83e4e4;
+  top: 1px;
+  left: -3px;
+  width: 36px;
+  height: 30px;
+  -webkit-mask-image: url("../svg/borderVerySmall.svg");
+  mask-image: url("../svg/borderVerySmall.svg");
 }
 .right .rightBar .header .header-buttons .challenge .inputS .inputS_imgRight {
   width: 100%;
@@ -2267,9 +2283,6 @@ code {
   mask-position: center center;
 }
 .right .rightBar .header .header-buttons .newFriend {
-  position: absolute;
-  right: 10px;
-  top: 54px;
   width: 30px;
   height: 30px;
 }
@@ -2278,7 +2291,14 @@ code {
   height: 100%;
 }
 .right .rightBar .header .header-buttons .newFriend .inputS .inputS-outline {
-  background: none !important;
+  position: absolute;
+  background: #83e4e4;
+  top: 1px;
+  left: -3px;
+  width: 36px;
+  height: 30px;
+  -webkit-mask-image: url("../svg/borderVerySmall.svg");
+  mask-image: url("../svg/borderVerySmall.svg");
 }
 .right .rightBar .header .header-buttons .newFriend .inputS .inputS_imgRight {
   width: 100%;
@@ -2298,9 +2318,6 @@ code {
   mask-position: center center;
 }
 .right .rightBar .header .header-buttons .newGroup {
-  position: absolute;
-  right: 60px;
-  top: 54px;
   width: 30px;
   height: 30px;
 }
@@ -2309,7 +2326,14 @@ code {
   height: 100%;
 }
 .right .rightBar .header .header-buttons .newGroup .inputS .inputS-outline {
-  background: none !important;
+  position: absolute;
+  background: #83e4e4;
+  top: 1px;
+  left: -3px;
+  width: 36px;
+  height: 30px;
+  -webkit-mask-image: url("../svg/borderVerySmall.svg");
+  mask-image: url("../svg/borderVerySmall.svg");
 }
 .right .rightBar .header .header-buttons .newGroup .inputS .inputS_imgRight {
   width: 100%;
@@ -2330,10 +2354,12 @@ code {
 }
 .right .rightBar .header .header-search {
   width: 180px;
-  position: absolute;
-  top: 100px;
+  margin-top: 45px;
   margin-left: 10px;
   border-bottom: 1px solid #83E4E4;
+}
+.right .rightBar .header .header-search .search-image:hover {
+  background: #FFD074;
 }
 .right .rightBar .header .header-search .search-image {
   position: absolute;
