--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -2908,20 +2908,30 @@ code {
     .header {
       position: absolute;
       top: 0;
+
       .header-buttons {
+        display: grid;
+        grid-template-columns: 36px 36px 36px 36px;
+        grid-gap: 5px;
+        margin-left: 25px;
+        margin-top: 15px;
+
         .openChat {
           width: 30px;
           height: 30px;
-          position: absolute;
-          left: 60px;
-          top: 55px;
-
           .inputS {
             height: 100%;
             width: 100%;
 
             .inputS-outline {
-              background: none!important;
+              position: absolute;
+              background: rgb(131, 228, 228);
+              top: 1px;
+              left: -3px;
+              width: 36px;
+              height: 30px;
+              -webkit-mask-image: url('../svg/borderVerySmall.svg');
+              mask-image: url('../svg/borderVerySmall.svg');
             }
 
             .inputS_imgRight {
@@ -2932,7 +2942,8 @@ code {
                 height: 100%;
                 width: 100%;
                 position: absolute;
-                -webkit-mask-size: 20px;
+                top: 2px;
+                -webkit-mask-size: 19px;
                 -webkit-mask-image: url('../svg/chat.svg');
                 mask-image: url('../svg/chat.svg');
                 -webkit-mask-repeat: no-repeat;
@@ -2945,9 +2956,6 @@ code {
         }
 
         .challenge {
-          position: absolute;
-          left: 10px;
-          top: 55px;
           width: 30px;
           height: 30px;
           .inputS {
@@ -2955,7 +2963,14 @@ code {
             height: 100%;
 
             .inputS-outline {
-              background: none!important;
+              position: absolute;
+              background: rgb(131, 228, 228);
+              top: 1px;
+              left: -3px;
+              width: 36px;
+              height: 30px;
+              -webkit-mask-image: url('../svg/borderVerySmall.svg');
+              mask-image: url('../svg/borderVerySmall.svg');
             }
 
             .inputS_imgRight {
@@ -2980,9 +2995,6 @@ code {
         }
 
         .newFriend {
-          position: absolute;
-          right: 10px;
-          top: 54px;
           width: 30px;
           height: 30px;
           .inputS {
@@ -2990,7 +3002,14 @@ code {
             height: 100%;
 
             .inputS-outline {
-              background: none!important;
+              position: absolute;
+              background: rgb(131, 228, 228);
+              top: 1px;
+              left: -3px;
+              width: 36px;
+              height: 30px;
+              -webkit-mask-image: url('../svg/borderVerySmall.svg');
+              mask-image: url('../svg/borderVerySmall.svg');
             }
 
             .inputS_imgRight {
@@ -3014,9 +3033,6 @@ code {
         }
 
         .newGroup {
-          position: absolute;
-          right: 60px;
-          top: 54px;
           width: 30px;
           height: 30px;
           .inputS {
@@ -3024,7 +3040,14 @@ code {
             height: 100%;
 
             .inputS-outline {
-              background: none!important;
+              position: absolute;
+              background: rgb(131, 228, 228);
+              top: 1px;
+              left: -3px;
+              width: 36px;
+              height: 30px;
+              -webkit-mask-image: url('../svg/borderVerySmall.svg');
+              mask-image: url('../svg/borderVerySmall.svg');
             }
 
             .inputS_imgRight {
@@ -3050,11 +3073,15 @@ code {
 
       .header-search {
         width: 180px;
-        position: absolute;
-        top: 100px;
+        // position: absolute;
+        // top: 100px;
+        margin-top: 45px;
         margin-left: 10px;
         border-bottom: 1px solid $color-white-blue;
 
+        .search-image:hover {
+          background: $color-yellow;
+        }
         .search-image {
           position: absolute;
           height: 20px;
