--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,6 +2,21 @@
 @import './cyberdyne.css';
 @import './robotoMono.css';
 @import './payment.css';
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 @keyframes comeIn {
   0% {
     transform: scale(0.5);
