--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -24,6 +24,22 @@ $width-medium: 160px;
 $width-small: 120px;
 $width-short: 90px;
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+
 @keyframes comeIn {
     0% { transform: scale(.5); opacity: 0; }
     75% { transform: scale(1.03); opacity: 1; }
